{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 40,
  "lineage": "ecacd8e2-42d0-01a5-28c9-2414d50c2647",
  "resources": [
    {
      "module": "module.modues",
      "mode": "data",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "module.modues.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:route-table/rtb-04a811980833aa8d6",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0b346910a83a78436",
                "route_table_id": "rtb-04a811980833aa8d6",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0001b65e1baefc8bd"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-04a811980833aa8d6",
            "owner_id": "481450237232",
            "route_table_id": "rtb-04a811980833aa8d6",
            "routes": [],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0001b65e1baefc8bd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.modues",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "module.modues.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.modues",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terramino",
      "provider": "module.modues.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6bf74cec98033e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "EFS mount point",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "learn-ec2-and-rds",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": "vpc-0001b65e1baefc8bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modues.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.modues",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet0",
      "provider": "module.modues.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:subnet/subnet-03dc54fe0deb28e56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dc54fe0deb28e56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481450237232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0001b65e1baefc8bd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.modues.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.modues",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "module.modues.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:subnet/subnet-0efe8be950b14a54f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efe8be950b14a54f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481450237232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0001b65e1baefc8bd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.modues.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.modues",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "module.modues.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:subnet/subnet-0d512fed88d78f0a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d512fed88d78f0a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481450237232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0001b65e1baefc8bd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.modues.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.modues",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "module.modues.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:subnet/subnet-07e30954f89e65438",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e30954f89e65438",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481450237232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0001b65e1baefc8bd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.modues.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.modues",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.modues.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481450237232:vpc/vpc-0001b65e1baefc8bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fcc4acc44572d35",
            "default_route_table_id": "rtb-04a811980833aa8d6",
            "default_security_group_id": "sg-0f9fedb4aa6ea569a",
            "dhcp_options_id": "dopt-03e1e7e9238fe30ad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0001b65e1baefc8bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a811980833aa8d6",
            "owner_id": "481450237232",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}